[package]
name = "coingirlgame-devcaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
devcaders = "0.3.1"
# devcaders = {path = "../devcaders"}
# bevy_turborand = "0.5.0"

[dependencies.bevy]
version = "0.10.0"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["bevy/dynamic_linking"]
devcade = []

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld"]
